--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,11 @@
 html,
 body {
+  display: flex;
+  flex-direction: column;
   padding: 0;
   margin: 0;
+  width: 100%;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -15,12 +19,17 @@ a {
   box-sizing: border-box;
 }
 
+#main {
+  display: flex;
+  flex-direction: column;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: ivory;
+    background: #121212;
   }
 }
