--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,10 +6,23 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+h1 {
+  font-size: 3em;
+  margin: 0;
+  padding: 0;
+}
+h2 {
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+}
+p {
+  font-weight:200;
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -22,6 +35,8 @@ a {
 #main {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  width: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
