--- a/styles/landing/AppIntro.module.css
+++ b/styles/landing/AppIntro.module.css
@@ -5,7 +5,7 @@
     height: 100vh;
     width: 100vw;
     z-index: 10;
-    position: absolute;
+    position: fixed;
     top: 0;
     background-color: #121212;
 }
