--- a/styles/company/Search.module.css
+++ b/styles/company/Search.module.css
@@ -18,12 +18,15 @@
     display: flex;
     flex-direction: column;
 }
-.resultList li {
+.resultList li a {
     padding: 2em 0;
     border-bottom: 1px solid violet;
     font-weight: 300;
     display: flex;
     flex-direction: column;
+}
+.resultList li a:hover {
+    border-bottom: 1px solid var(--neon-green);
 }
 .symbol {
     color: violet;
