Build: Add new global style dark-pink

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 :root {
   --neon-pink: #F900BF;
   --neon-green: #00FFAB;
+  --dark-pink: #A91079;
   --dark-gray: #121212;
   --gray: #343434;
   --error: #D61C4E;
