--- a/styles/company/Profile.module.css
+++ b/styles/company/Profile.module.css
@@ -18,6 +18,22 @@
     margin-bottom: 5em;
     width: 100%;
 }
+.graphModesContainer {
+    display: flex;
+    justify-content: center;
+    gap: 2em;
+    margin-top: 2em;
+}
+.graphModesContainer button {
+    background-color: var(--dark-pink);
+    border: none;
+    border-radius: 5px;
+    padding: 0.5em 1em;
+    cursor: pointer;
+}
+.graphModesContainer button.isActive {
+    background-color: var(--neon-pink);
+}
 .overviewContainer {
     width: 100%;
     display: flex;
