--- a/styles/layouts/Header.module.css
+++ b/styles/layouts/Header.module.css
@@ -1,8 +1,14 @@
 .header {
     height: 10vh;
     width: 90vw;
+    padding-top: 1em;
     position: fixed;
     top: 0;
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.menuIsOpen {
+    height: 100vh;
+    background-color: var(--dark-gray);
 }
