--- a/styles/landing/Index.module.css
+++ b/styles/landing/Index.module.css
@@ -11,3 +11,9 @@
     font-weight: 200;
     margin: 0.5em 0;
 }
+
+@media(min-width: 768px) {
+    .searchSection {
+        width: 60vw;
+    }
+}
