Add dark-green to color variables

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@
   --neon-green: #00FFAB;
   --dark-pink: #A91079;
   --dark-gray: #121212;
+  --dark-green: #14C38E;
   --purple-blue: #293462;
   --gray: #343434;
   --error: #D61C4E;
