--- a/styles/UI/SearchBar.module.css
+++ b/styles/UI/SearchBar.module.css
@@ -7,13 +7,77 @@
 .searchBar {
     width: 100%;
     padding: 1em;
-    border-radius: 5px;
     border: none;
     color: ivory;
     background-color: var(--gray);
+    
+}
+.searchBar:focus {
+    /* override default input focus behavior */
+    outline: none;
+    border: none;
+    box-shadow: none;
+}
+
+.searchBarContainer {
+    width: 100%;
+    display: flex;
+}
+.resultsBorderWithoutRecords {
+    border-radius: 5px 0 0 5px;
+}
+.resultsBorderWithRecords {
+    border-radius: 5px 0 0 0;
+}
+.searchIcon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--gray);
+    padding: 1em;
+    cursor: pointer;
+}
+.searchIconBorderWithRecords {
+    border-radius: 0 5px 0 0;
+}
+.searchIconBorderWithoutRecords {
+    border-radius: 0 5px 5px 0;
 }
 .userMessage {
     color: var(--error);
     margin-top: 0.5em;
+    font-weight: 200;
+}
+.searchResultsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    background-color: var(--gray);
+    border: none;
+    border-radius: 0 0 5px 5px;
+}
+.searchResultsList {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+.searchItem {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    padding: 1em;
+    cursor: pointer;
+}
+.searchItem:hover {
+    color: black;
+    background-color: var(--dark-green);
+}
+.ticker {
+    font-weight: 200;
+    font-size: 0.8em;
+}
+.companyName {
     font-weight: 200;
 }
