Style: Fix height of searchbar

--- a/styles/UI/SearchBar.module.css
+++ b/styles/UI/SearchBar.module.css
@@ -6,12 +6,12 @@
 }
 
 .searchBar {
+    height: 100%;
     width: 100%;
     padding: 1em;
     border: none;
     color: ivory;
     background-color: var(--gray);
-
 }
 
 .searchBar:focus {
@@ -23,6 +23,7 @@
 
 .searchBarContainer {
     width: 100%;
+    height: 3em;
     display: flex;
 }
 
