--- a/styles/landing/Index.module.css
+++ b/styles/landing/Index.module.css
@@ -1,20 +1,57 @@
-.searchSection {
+.bannerSection {
+    background-image: url("../../assets/FinflexiBanner.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #00FFAB;
+    background-position: left bottom;
     display: flex;
-    flex-direction: column;
-    margin-top: 5vh;
-    align-items: center;
-    width: 90vw;
-    height: 100vh;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 100%;
+    height: 40vh;
 }
 
-.sloganHeading {
+.signUpButton {
+    margin: 1em;
+    border: none;
+    padding: 1em 2em;
+    border-radius: 24px;
+    background-color: darkorchid;
+    color: white;
+    font-weight: 600;
+    box-shadow: 3px 5px 10px 2px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+
+.searchDesc {
     font-size: 1.5em;
     font-weight: 200;
     margin: 0.5em 0;
 }
 
+.searchBarContainer {
+    width: 90vw;
+    height: 30vh;
+    margin-top: 5em;
+    margin-bottom: 1em;
+}
+
+.sectionContainer {
+    display: flex;
+    align-items: center;
+    height: 40vh;
+    width: 100%;
+    padding: 1em;
+}
+
+.sectionContainer h1 {
+    font-weight: 300;
+    font-size: 4em;
+}
+
 @media(min-width: 768px) {
-    .searchSection {
+
+    .searchBarContainer {
         width: 60vw;
     }
 }
