--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,8 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  width: 100%;
+  padding: 0 0 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -116,13 +117,16 @@
 }
 
 @media (prefers-color-scheme: dark) {
+
   .card,
   .footer {
     border-color: #222;
   }
+
   .code {
     background: #111;
   }
+
   .logo img {
     filter: invert(1);
   }
