--- a/styles/UI/SearchBar.module.css
+++ b/styles/UI/SearchBar.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: auto;
 }
 
 .searchBar {
@@ -66,7 +67,7 @@
     background-color: var(--gray);
     border: none;
     border-radius: 0 0 5px 5px;
-    z-index: 20;
+    z-index: 200;
 }
 
 .searchResultsList {
