--- a/styles/company/Favorites.module.css
+++ b/styles/company/Favorites.module.css
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
-    height: 100%;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,4 +58,16 @@
 
 .starContainer {
     padding: 0 1em;
+}
+
+.noFavorites {
+    display: flex;
+    flex-direction: column;
+    width: 90vw;
+}
+
+@media (min-width: 768px) {
+    .noFavorites {
+        align-items: center;
+    }
 }
