--- a/styles/layouts/Footer.module.css
+++ b/styles/layouts/Footer.module.css
@@ -1,16 +1,37 @@
 .footer {
-    margin-top: 15em;
-    width: 90vw;
-    height: 15em;
-    color: var(--purple-blue);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin-top: 10em;
+    padding-top: 2em;
+    width: 100%;
+    height: 20em;
+    color: blueviolet;
 }
+
 .footerContent {
+    width: 100%;
+    padding: 1em;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    height: 100%;
+}
+
+.footerContent ul {
+    list-style-type: none;
+    font-weight: 200;
+    padding: 2em 0;
+    margin: 0;
+}
+
+.footerContent ul li {
+    padding: 0.25em;
+}
+
+.listTitle {
+    font-weight: bold;
+}
+
+.disclaimer,
+.copyRight {
+    font-size: 0.8em;
 }
