Style: remove background color from SignOut component

--- a/styles/UI/SignOut.module.css
+++ b/styles/UI/SignOut.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: var(--dark-gray);
+    background-color: none;
     margin-top: 10em;
 }
 
