--- a/styles/company/Favorites.module.css
+++ b/styles/company/Favorites.module.css
@@ -7,6 +7,15 @@
     padding-top: 10em;
 }
 
+.loadingContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 90vh;
+    width: 100%;
+    padding-top: 7em;
+}
+
 .title {
     font-weight: 300;
     margin-bottom: 2em;
