--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -7,6 +7,15 @@
     padding-top: 7em;
 }
 
+.loadingContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 90vh;
+    width: 100%;
+    padding-top: 7em;
+}
+
 .title {
     font-weight: 200;
     padding-bottom: 0.5em;
