--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,15 @@ input:focus {
   box-shadow: 0 0 5px var(--neon-green);
 }
 
+.loadingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 90vh;
+  width: 100%;
+  padding-top: 7em;
+}
+
 /* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
