--- a/components/UI/Calendar.module.css
+++ b/components/UI/Calendar.module.css
@@ -2,17 +2,24 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding-top: 1em;
-    min-width: 960px;
-    min-height: 540px;
-    background-color: brown;
+    width: 100%;
+    max-width: 1250px;
+    height: auto;
+    /* background-color: lightgray; */
     border-radius: 10px;
-    border: 1px solid black;
     overflow: hidden;
 }
 
+.calendarHeader {
+    width: 100%;
+    height: 100%;
+    background-color: #428bca;
+    padding-top: 1em;
+    border-bottom: 1px solid black;
+}
+
 .monthTitle {
-    color: black;
+    text-align: center;
     padding: 0.25em;
 }
 
@@ -21,9 +28,7 @@
 }
 
 .weekdayRow {
-    display: flex;
-    width: 100%;
-    height: 3em;
+    display: none;
 }
 
 .weekdayContainer {
@@ -31,7 +36,6 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    color: black;
 }
 
 .weekdayTitle {
@@ -42,42 +46,112 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    border-bottom: none;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    background-color: gray;
-    overflow: hidden;
+    height: auto;
+    padding-bottom: 1em;
+    overflow-x: hidden;
 }
 
 .isToday {
-    background-color: darkgray;
-    border-radius: 24px;
+    border-radius: 0px;
 }
 
 .dayNumber {
     padding: 5px 6px;
-    align-self: flex-end;
-    color: black;
-    margin: 0.5em 0.5em 0 0;
+    margin-bottom: 0.5em;
 }
 
-.row {
+.weekRow {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
     flex: 1;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
     width: 100%;
+}
+
+.weekRow div {
+    border-right: none;
 }
 
 .eventListContainer {
     list-style-type: none;
     margin: 0;
-    padding: 0;
-    color: black;
+    padding: 0 0 0 2em;
+    white-space: nowrap;
+    overflow-x: hidden;
 }
 
-@media (min-width: 768px) {}
+.eventItem {
+    border-radius: 5px;
+    padding: 2px;
+    margin-right: 0.5em;
+    margin-bottom: 0.5em;
+    overflow: hidden;
+}
+
+.mobileViewDay {
+    display: none;
+}
+
+@media (min-width: 391px) {
+    .isToday {
+        border-radius: 24px;
+    }
+
+    .mobileViewDay {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        border-right: 1px solid black;
+        padding-bottom: 1em;
+        border-bottom: none;
+        background-color: darkgray;
+        overflow-x: hidden;
+    }
+
+    .monthTitle {
+        text-align: left;
+    }
+
+    .weekdayRow {
+        display: flex;
+        width: 100%;
+        height: 3em;
+    }
+
+    .weekRow {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        flex: 1;
+        width: 100%;
+    }
+
+    .dayNumber {
+        padding: 5px 6px;
+        align-self: flex-end;
+        margin: 0.5em 0.5em 0.5em 0;
+    }
+
+    .dayContainer {
+        height: 7em;
+        border-bottom: none;
+    }
+
+    .eventListContainer {
+        padding: 0 0 0 0.25em;
+        height: auto;
+    }
+
+    .dayTilesContainer div:last-child {
+        border-bottom: none;
+    }
+}
+
+@media (min-width: 820px) {
+    .dayContainer {
+        height: 10em;
+    }
+}
 
 @media (prefers-color-scheme: light) {}
