--- a/components/UI/Calendar.module.css
+++ b/components/UI/Calendar.module.css
@@ -3,16 +3,14 @@
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    max-width: 1250px;
-    height: auto;
-    /* background-color: lightgray; */
+    max-width: 820px;
     border-radius: 10px;
     overflow: hidden;
 }
 
 .calendarHeader {
     width: 100%;
-    height: 100%;
+    height: auto;
     background-color: #428bca;
     padding-top: 1em;
     border-bottom: 1px solid black;
@@ -68,10 +66,6 @@
     width: 100%;
 }
 
-/* .weekRow div {
-    border-right: none !important;
-} */
-
 .eventListContainer {
     list-style-type: none;
     margin: 0;
@@ -82,13 +76,23 @@
 
 .eventItem {
     border-radius: 5px;
+    height: auto;
     padding: 2px;
     margin-right: 0.5em;
     margin-bottom: 0.5em;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .mobileViewDay {
+    display: none;
+}
+
+.mobileViewDayNoEvents {
+    padding: 2em 0;
+    text-align: center;
+}
+
+.eventsSummary {
     display: none;
 }
 
@@ -96,9 +100,17 @@
     .weekRow div {
         border-right: none !important;
     }
+
+    .hideOnMobile {
+        display: none;
+    }
 }
 
 @media (min-width: 391px) {
+    .container {
+        align-self: flex-start;
+    }
+
     .isToday {
         border-radius: 24px;
     }
@@ -131,32 +143,57 @@
         flex-wrap: nowrap;
         flex: 1;
         width: 100%;
+        height: auto;
     }
 
     .dayNumber {
-        padding: 5px 6px;
+        padding: 1px 3px;
         align-self: flex-end;
-        margin: 0.5em 0.5em 0.5em 0;
     }
 
     .dayContainer {
-        height: 7em;
+        aspect-ratio: 1/1;
+        padding-bottom: 5px;
         border-bottom: none;
     }
 
     .eventListContainer {
-        padding: 0 0 0 0.25em;
-        height: auto;
+        display: none;
     }
 
     .dayTilesContainer div:last-child {
         border-bottom: none;
     }
+
+    .mobileViewDayNoEvents {
+        display: none;
+    }
+
+    .eventsSummary {
+        display: flex;
+        height: auto;
+        width: 90%;
+        margin-left: 0.25em;
+        white-space: nowrap;
+        padding: 0.25em;
+        overflow-x: hidden;
+    }
 }
 
-@media (min-width: 820px) {
-    .dayContainer {
-        height: 10em;
+@media (min-width: 550px) {
+    .dayNumber {
+        padding: 5px 6px;
+        margin: 0.5em 0.5em 0.5em 0;
+    }
+
+    .eventListContainer {
+        display: block;
+        padding: 0 0 0 0.25em;
+        height: auto;
+    }
+
+    .eventsSummary {
+        display: none;
     }
 }
 
