--- a/styles/company/Favorites.module.css
+++ b/styles/company/Favorites.module.css
@@ -26,47 +26,8 @@
     margin: 0;
     padding: 0;
     width: 90vw;
+    max-width: 768px;
     margin-bottom: 2em;
-}
-
-.listItemContainer {
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.linkContainer {
-    width: 100%;
-}
-
-.listItemDetails {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    padding: 1em;
-    cursor: pointer;
-}
-
-.listItemDetails:hover {
-    color: black;
-    background-color: var(--dark-green);
-}
-
-.ticker {
-    font-weight: 200;
-    font-size: 0.8em;
-}
-
-.companyName {
-    font-weight: 200;
-}
-
-.starIcon {
-    cursor: pointer;
-}
-
-.starContainer {
-    padding: 0 1em;
 }
 
 .noFavorites {
