Set a max-width to search bar on landing page

--- a/styles/landing/Index.module.css
+++ b/styles/landing/Index.module.css
@@ -30,6 +30,7 @@
 
 .searchBarContainer {
     width: 90vw;
+    max-width: 768px;
     height: 30vh;
     margin-top: 5em;
     margin-bottom: 1em;
