--- a/styles/layouts/Header.module.css
+++ b/styles/layouts/Header.module.css
@@ -37,6 +37,7 @@
     justify-content: flex-start;
     align-self: flex-start;
     width: 75vw;
+    max-width: 768px;
     margin-left: 1em;
     margin-top: 1em;
     z-index: 200;
@@ -46,8 +47,8 @@
     width: 100%;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 768px) {
     .searchBarSection {
-        width: 90vw;
+        align-self: center;
     }
 }
