--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -4,14 +4,13 @@
     align-items: center;
     min-height: 90vh;
     width: 100%;
-    padding-top: 7em;
+    padding-top: 3em;
 }
 
 .calendarSection {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
-    /* flex-wrap: wrap; */
     gap: 1em;
     width: 90vw;
 }
@@ -112,7 +111,30 @@
 .emptyDashContainer {
     margin-top: 5em;
     width: 100%;
-    max-width: 768px;
+    max-width: 1500px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.welcomeHeader {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2em;
+}
+
+.welcomeSection {
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.welcomeSection p {
+    text-align: center;
 }
 
 .emptyDashContainer h1 {
@@ -120,6 +142,10 @@
 }
 
 @media (min-width: 768px) {
+
+    .container {
+        padding-top: 7em;
+    }
 
     .chartSection,
     .calendarSection {
