--- a/styles/Signin.module.css
+++ b/styles/Signin.module.css
@@ -87,6 +87,11 @@
     border: none;
     border-radius: 25px;
     cursor: pointer;
+    margin-top: 1.2em;
+}
+
+.signInLoaderContainer {
+    align-self: flex-end;
 }
 
 @media (min-width: 768px) {
