--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,7 @@ body {
   height: 100%;
   font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overflow-x: hidden;
 }
 
 h1 {
