--- a/styles/landing/Index.module.css
+++ b/styles/landing/Index.module.css
@@ -1,3 +1,10 @@
+.container {
+    width: 100%;
+    height: 100%;
+    /* Need overflow-x: hidden to prevent sliding animation from skewing layout when in view */
+    overflow-x: hidden;
+}
+
 .bannerSection {
     background-image: url("../../assets/FinflexiBanner.svg");
     background-repeat: no-repeat;
