--- a/styles/MyAccount.module.css
+++ b/styles/MyAccount.module.css
@@ -1,8 +1,39 @@
 .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding-top: 10em;
     min-height: 80vh;
 }
 
 .title {
     font-weight: 200
+}
+
+.constructionContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 7em;
+    min-width: 380px;
+}
+
+.constructionContainer h2 {
+    margin-top: 1em;
+    font-weight: 200;
+    text-align: center;
+}
+
+.constructionImg {
+    width: 300px;
+    height: 300px;
+}
+
+@media (min-width: 768px) {
+    .constructionImg {
+        width: 400px;
+        height: 400px;
+    }
 }
