--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --neon-pink: #F900BF;
   --neon-green: #00FFAB;
@@ -51,8 +55,7 @@ a {
 #main {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
 }
 
