--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,47 +16,17 @@
 html,
 body {
   color: var(--neon-pink);
-  background: var(--dark-gray);
+  background: #f8f9fa;
   display: flex;
   flex-direction: column;
   padding: 0;
   margin: 0;
-  width: 100%;
-  height: 100%;
   font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-h1 {
-  font-size: 3em;
-  margin: 0;
-  padding: 0;
-}
-
-h2 {
-  font-weight: 500;
-  margin: 0;
-  padding: 0;
-}
-
-p {
-  font-weight: 200;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
-}
-
-#main {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  width: 100%;
 }
 
 input:focus {
