--- a/styles/UI/SearchBarResults.module.css
+++ b/styles/UI/SearchBarResults.module.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    background-color: var(--gray);
     border: none;
     border-radius: 0 0 5px 5px;
     z-index: 200;
@@ -20,18 +19,12 @@
     display: flex;
     width: 100%;
     flex-direction: column;
-    padding: 1em;
     cursor: pointer;
-}
-
-.searchItem:hover {
-    color: black;
-    background-color: var(--dark-green);
 }
 
 .highlight {
     color: black;
-    background-color: var(--dark-green);
+    background-color: var(--bg-light-indigo);
 }
 
 .ticker {
