--- a/styles/UI/Loading.module.css
+++ b/styles/UI/Loading.module.css
@@ -2,7 +2,7 @@
     display: inline-block;
     position: relative;
     width: 80px;
-    height: 80px;
+    /* height: 80px; */
 }
 
 .ldsEllipsis div {
@@ -11,7 +11,7 @@
     width: 13px;
     height: 13px;
     border-radius: 50%;
-    background: var(--neon-green);
+    background: var(--bg-light-indigo);
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 
