--- a/styles/company/Profile.module.css
+++ b/styles/company/Profile.module.css
@@ -45,12 +45,11 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    border-bottom: 1px solid rgba(169, 16, 121, 0.5);
+    border-bottom: 1px solid rgb(165 180 252);
 }
 
 .overviewSection span {
     padding: 1em 0 0.5em 0;
-    color: var(--dark-pink);
 }
 
 .desc {
